--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -14,6 +14,9 @@
 
 {{ partialCached "head/custom-icons.html" . }}
 
+<!-- Add your custom CSS link here -->
+<link rel="stylesheet" href="/css/custom.css">
+
 {{ partial "head/alternative-output-formats.html" . }}
 
 {{ if .IsHome }}{{ partial "head/hugo-generator.html" . }}{{ end }}
