--- a/layouts/partials/home.html
+++ b/layouts/partials/home.html
@@ -1,11 +1,20 @@
-<section class="container centered">
+<section class="container centered"> 
   <div class="about">
     {{ partialCached "home/avatar.html" . }}
-
     {{ partialCached "home/author.html" . }}
-
     {{ partialCached "home/social.html" . }}
   </div>
 
   {{ partialCached "home/extensions.html" . }}
+</section>
+
+<section class="container centered">
+  <div class="academic-container">
+    <h2 class="academic-title">Welcome</h2>
+    {{ with .Site.Params.academicDescription }}
+      <div class="academic-blurb">
+        {{ . | markdownify }}
+      </div>
+    {{ end }}
+  </div>
 </section>
